Added a paragraph for the description Added an unordered list for ingredients and an ordered list for the steps for the recipe

--- a/recipes/ice-cream.html
+++ b/recipes/ice-cream.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <p>Ice cream is a beloved frozen dessert that combines cream, sugar, and flavorings to create a rich and creamy indulgence. With its origins dating back centuries, this delightful treat has evolved into countless varieties, making it a staple in households and ice cream parlors around the world. </p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups heavy cream</li>
+            <li>1 cup whole milk</li>
+            <li>3/4 cup granulated sugar</li>
+            <li>1 tablespoon pure vanilla extract</li>
+            <li>A pinch of salt</li>
+        </ul>   
+    <h2>Instructions</h2>  
+        <ol>
+            <li>In a large mixing bowl, combine the heavy cream, whole milk, granulated sugar, vanilla extract, and a pinch of salt. Whisk until the sugar is fully dissolved.</li>
+            <li>Cover the bowl with plastic wrap or a lid and refrigerate the mixture for at least 1-2 hours. For the best results, chill it overnight.</li>
+            <li>
+                <p>If you have an ice cream maker, pour the chilled mixture into the ice cream maker and churn according to the manufacturer’s instructions until it reaches a soft-serve consistency.</p>
+                <p>If you don't have an ice cream maker, pour the mixture into a shallow dish and place it in the freezer.</p>
+            </li>
+            <li>After 30 minutes, take it out and stir vigorously with a fork or whisk to break up any ice crystals. Return to the freezer. Repeat this process every 30 minutes for about 2-3 hours, or until the ice cream is firm and creamy.</li>
+            <li>Once the ice cream is firm, it's ready to serve! You can scoop it into bowls or cones and enjoy it plain or with your favorite toppings!</li>
+        </ol>
     
 </body>
 </html>
