--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,18 +7,69 @@
     <title>Odin Recipes - Ramen</title>
     <h1>Ramen</h1>
     <img src="../images/ramen.jpg" alt="A picture of a bowl of ramen" height="310" width="310"> 
+    
 </head>
 
 
 
 <body>
+    <p>Ramen is a beloved and versatile Japanese noodle soup that has captured the hearts (and taste buds) of food enthusiasts around the world. Traditionally consisting of Chinese-style wheat noodles served in a rich and flavorful broth, ramen offers a harmonious blend of taste and texture. The base of the soup can vary widely, encompassing ingredients such as miso, soy sauce, or tonkotsu (pork bone), each contributing its own unique depth of flavor.</p>
+    <p>Typically garnished with a delightful array of toppings, ramen can include slices of tender chashu (braised pork), marinated soft-boiled eggs, fresh green onions, nori (seaweed), and a variety of vegetables. This adaptability allows for endless creativity, enabling cooks to tailor their ramen to suit their personal preferences or dietary needs.</p>
+    <p>Whether you're indulging in a classic shoyu ramen or experimenting with a spicy tantanmen, this iconic dish promises a soul-warming experience that is both comforting and satisfying. Join us as we explore the art of making authentic ramen at home, where you can take your taste buds on a flavorful journey to the heart of Japan!</p>    
 
+    <h2>Ingredients</h2>
+    <h2>For the broth</h2>
+        <ul>
+            <li>4 cups chicken broth</li>
+            <li>2 cups water</li>
+            <li>1 tablespoon soy sauce</li>
+            <li>1 tablespoon miso paste</li>
+            <li>1 inch ginger, sliced</li>
+            <li>2 cloves garlic, smashed</li>
+            <li>2 green onions, cut into large pieces2 green onions, cut into large pieces</li>
+            <li>salt and pepper, to taste</li>
+        </ul>
+    <h2>For the noodles</h2>
+        <ul>
+            <li>2 servings of fresh or dried ramen noodles</li>
+        </ul>
+    <h2>For the topping</h2>
 
-
-
-
-
-
+        <ul>
+            <li>2 boneless, skinless chicken thighs</li>
+            <li>2 soft-boiled eggs</li>
+            <li>Nori sheets, cut into strips</li>
+            <li>Fresh green onions, chopped</li>
+            <li>Matsutake mushroom or shiitake mushrooms, sliced</li>
+            <li>Bean sprouts</li>
+        </ul>
+    <h2>Cooking</h2>
+        <h3>Prepare the broth</h3>
+            <ol>
+                <li>In a large pot, combine the chicken broth, water, soy sauce, miso paste, ginger, garlic, and green onions. Bring to a simmer over medium heat.</li>
+                <li>Allow it to simmer for about 15-20 minutes to let the flavors combine. If desired, strain out the ginger, garlic, and green onions afterward for a clearer broth. Adjust seasoning with salt and pepper as needed.</li>
+            </ol>
+        <h3>Cook the chicken</h3>
+             <ol>
+                <li>In a separate pan, add enough water to cover the chicken thighs. Bring it to a boil and then let it simmer for about 10-12 minutes until the chicken is fully cooked.</li>
+                <li>Remove the chicken and let it rest for a few minutes before slicing it thinly.</li>
+             </ol>
+        <h3>Soft-boiled the eggs</h3>
+             <ol>
+                <li>In a small pot, bring water to a boil. Carefully add the eggs and boil them for about 6-7 minutes for a soft yolk.</li>
+                <li>Remove the eggs and immediately place them into a bowl of ice water. Once cooled, peel the eggs and slice them in half. You can marinate them in soy sauce for added flavor.Remove the eggs and immediately place them into a bowl of ice water. Once cooled, peel the eggs and slice them in half. You can marinate them in soy sauce for added flavor.</li>
+             </ol>
+        <h3>Cook the noodles</h3>
+             <ol>
+                <li>Cook the ramen noodles according to the package instructions. Drain and rinse under cold water to stop the cooking process.</li>
+             </ol>
+        <h3>Assemble the ramen</h3>
+             <ol>
+                <li>In each bowl, place a serving of noodles.</li>
+                <li>Ladle the hot broth over the noodles.</li>
+                <li>Top with slices of chicken, soft-boiled egg halves, sliced mushrooms, bean sprouts, and strips of nori.</li>
+                <li>Garnish with diced green onions, sesame seeds, and a drizzle of chili oil if desired.</li>
+             </ol>
 
 </body>
 
