--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ramen.html">Ramen</a>
-    <a href="recipes/fried-chicken.html">Fried Chicken</a>
-    <a href="recipes/ice-cream.html">Ice Cream</a>
+    <ul>
+        <li><a href="recipes/ramen.html">Ramen</a></li>
+        <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
+        <li><a href="recipes/ice-cream.html">Ice Cream</a></li>
+    </ul>
 </head>
 
 
