Added a description heading and changed eached recipes heading for steps.

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -10,6 +10,7 @@
 
 
 <body>
+    <h2>Description</h2>
     <p>Indulge in the ultimate comfort food with our Crispy Fried Chicken! This mouthwatering dish combines a golden, crunchy exterior with tender, juicy meat that will leave your taste buds begging for more. Each piece of chicken is perfectly seasoned and coated in a flavorful breading, delivering a savory crunch with every bite.</p>
     <p>Our recipe begins with marinating the chicken to infuse it with rich flavors, followed by a double-dipping technique that ensures an extra crispy crust. Whether you prefer classic buttermilk or a spicy variation, this fried chicken is versatile and ready to impress at any gathering.</p>    
     <p>Serve it hot with your favorite sides, from creamy coleslaw to fluffy mashed potatoes, and don’t forget a drizzle of honey or a side of dipping sauce for an added touch of deliciousness. Perfect for picnics, family dinners, or weekend feasts, this Crispy Fried Chicken is sure to become a staple in your kitchen!</p>
@@ -36,7 +37,7 @@
             <ul>
                 <li>Vegetable oil for frying; enough to cover the chicken pieces in the pan</li>
             </ul>
-    <h2>Instructions</h2>   
+    <h2>Steps</h2>   
         <h3>Marinate the chicken</h3>    
             <Ol>
                 <li>In a large bowl, combine the buttermilk, hot sauce (if using), salt, and pepper. Add the chicken pieces, ensuring they are fully submerged. </li>
