--- a/recipes/ice-cream.html
+++ b/recipes/ice-cream.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h2>Description</h2>
     <p>Ice cream is a beloved frozen dessert that combines cream, sugar, and flavorings to create a rich and creamy indulgence. With its origins dating back centuries, this delightful treat has evolved into countless varieties, making it a staple in households and ice cream parlors around the world. </p>
     <h2>Ingredients</h2>
         <ul>
@@ -18,7 +19,7 @@
             <li>1 tablespoon pure vanilla extract</li>
             <li>A pinch of salt</li>
         </ul>   
-    <h2>Instructions</h2>  
+    <h2>Steps</h2>  
         <ol>
             <li>In a large mixing bowl, combine the heavy cream, whole milk, granulated sugar, vanilla extract, and a pinch of salt. Whisk until the sugar is fully dissolved.</li>
             <li>Cover the bowl with plastic wrap or a lid and refrigerate the mixture for at least 1-2 hours. For the best results, chill it overnight.</li>
