--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -13,12 +13,14 @@
 
 
 <body>
-    <p>Ramen is a beloved and versatile Japanese noodle soup that has captured the hearts (and taste buds) of food enthusiasts around the world. Traditionally consisting of Chinese-style wheat noodles served in a rich and flavorful broth, ramen offers a harmonious blend of taste and texture. The base of the soup can vary widely, encompassing ingredients such as miso, soy sauce, or tonkotsu (pork bone), each contributing its own unique depth of flavor.</p>
-    <p>Typically garnished with a delightful array of toppings, ramen can include slices of tender chashu (braised pork), marinated soft-boiled eggs, fresh green onions, nori (seaweed), and a variety of vegetables. This adaptability allows for endless creativity, enabling cooks to tailor their ramen to suit their personal preferences or dietary needs.</p>
-    <p>Whether you're indulging in a classic shoyu ramen or experimenting with a spicy tantanmen, this iconic dish promises a soul-warming experience that is both comforting and satisfying. Join us as we explore the art of making authentic ramen at home, where you can take your taste buds on a flavorful journey to the heart of Japan!</p>    
+    <h2>Description</h2>
+        <p>Ramen is a beloved and versatile Japanese noodle soup that has captured the hearts (and taste buds) of food enthusiasts around the world. Traditionally consisting of Chinese-style wheat noodles served in a rich and flavorful broth, ramen offers a harmonious blend of taste and texture. The base of the soup can vary widely, encompassing ingredients such as miso, soy sauce, or tonkotsu (pork bone), each contributing its own unique depth of flavor.</p>
+        <p>Typically garnished with a delightful array of toppings, ramen can include slices of tender chashu (braised pork), marinated soft-boiled eggs, fresh green onions, nori (seaweed), and a variety of vegetables. This adaptability allows for endless creativity, enabling cooks to tailor their ramen to suit their personal preferences or dietary needs.</p>
+        <p>Whether you're indulging in a classic shoyu ramen or experimenting with a spicy tantanmen, this iconic dish promises a soul-warming experience that is both comforting and satisfying. Join us as we explore the art of making authentic ramen at home, where you can take your taste buds on a flavorful journey to the heart of Japan!</p>    
+   
 
     <h2>Ingredients</h2>
-    <h2>For the broth</h2>
+    <h3>For the broth</h3>
         <ul>
             <li>4 cups chicken broth</li>
             <li>2 cups water</li>
@@ -29,11 +31,11 @@
             <li>2 green onions, cut into large pieces2 green onions, cut into large pieces</li>
             <li>salt and pepper, to taste</li>
         </ul>
-    <h2>For the noodles</h2>
+    <h3>For the noodles</h3>
         <ul>
             <li>2 servings of fresh or dried ramen noodles</li>
         </ul>
-    <h2>For the topping</h2>
+    <h3>For the topping</h3>
 
         <ul>
             <li>2 boneless, skinless chicken thighs</li>
@@ -43,7 +45,7 @@
             <li>Matsutake mushroom or shiitake mushrooms, sliced</li>
             <li>Bean sprouts</li>
         </ul>
-    <h2>Cooking</h2>
+    <h2>Steps</h2>
         <h3>Prepare the broth</h3>
             <ol>
                 <li>In a large pot, combine the chicken broth, water, soy sauce, miso paste, ginger, garlic, and green onions. Bring to a simmer over medium heat.</li>
